@@ -15,7 +15,6 @@ package tech.pegasys.teku.infrastructure.ssz.schema.collections.impl;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.apache.tuweni.bytes.Bytes;
 import tech.pegasys.teku.infrastructure.ssz.tree.LeafNode;
 import tech.pegasys.teku.infrastructure.ssz.tree.TreeNode;
@@ -25,10 +24,7 @@ class SchemaUtils {
 
   public static TreeNode createTreeFromBytes(Bytes bytes, int treeDepth) {
     return TreeUtil.createTree(
-        split(bytes, LeafNode.MAX_BYTE_SIZE).stream()
-            .map(LeafNode::create)
-            .collect(Collectors.toList()),
-        treeDepth);
+        split(bytes, LeafNode.MAX_BYTE_SIZE).stream().map(LeafNode::create).toList(), treeDepth);
   }
 
   public static List<Bytes> split(Bytes bytes, int chunkSize) {
