@@ -21,10 +21,10 @@ import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.apache.tuweni.bytes.Bytes;
 import org.apache.tuweni.bytes.Bytes32;
@@ -82,7 +82,7 @@ public class V4FinalizedKvStoreDao {
     return maybeRoots.stream()
         .flatMap(Collection::stream)
         .flatMap(root -> db.get(schema.getColumnNonCanonicalBlocksByRoot(), root).stream())
-        .collect(Collectors.toList());
+        .toList();
   }
 
   public Optional<BeaconState> getLatestAvailableFinalizedState(final UInt64 maxSlot) {
@@ -167,7 +167,7 @@ public class V4FinalizedKvStoreDao {
                 slotAndBlockRoot.getSlot(), slotAndBlockRoot.getBlockRoot(), UInt64.ZERO),
             new SlotAndBlockRootAndBlobIndex(
                 slotAndBlockRoot.getSlot(), slotAndBlockRoot.getBlockRoot(), UInt64.MAX_VALUE))) {
-      return streamKeys.collect(Collectors.toList());
+      return streamKeys.toList();
     }
   }
 
@@ -180,7 +180,7 @@ public class V4FinalizedKvStoreDao {
                 slotAndBlockRoot.getSlot(), slotAndBlockRoot.getBlockRoot(), UInt64.ZERO),
             new SlotAndBlockRootAndBlobIndex(
                 slotAndBlockRoot.getSlot(), slotAndBlockRoot.getBlockRoot(), UInt64.MAX_VALUE))) {
-      return streamKeys.collect(Collectors.toList());
+      return streamKeys.toList();
     }
   }
 
@@ -234,8 +234,17 @@ public class V4FinalizedKvStoreDao {
     return db.getRaw(kvStoreColumn, key);
   }
 
-  public Map<String, Long> getColumnCounts() {
+  public Map<String, Long> getColumnCounts(final Optional<String> maybeColumnFilter) {
     final Map<String, Long> columnCounts = new HashMap<>();
+    schema
+        .getColumnMap()
+        .forEach(
+            (k, v) -> {
+              if (maybeColumnFilter.isEmpty()
+                  || k.contains(maybeColumnFilter.get().toUpperCase(Locale.ROOT))) {
+                columnCounts.put(k, db.size(v));
+              }
+            });
     schema.getColumnMap().forEach((k, v) -> columnCounts.put(k, db.size(v)));
     return columnCounts;
   }
